Fix for overlap of save and back button on default group page

--- a/app/cases/styles/case.css
+++ b/app/cases/styles/case.css
@@ -432,3 +432,9 @@ div#rha-recommendation-section .hand-picked {
     border-bottom: 1px solid #cccccc;
     border-right: 1px solid #cccccc;
 }
+
+.divider{
+    width:10px;
+    height:auto;
+    display:inline-block;
+}
